--- a/_config.yml
+++ b/_config.yml
@@ -14,3 +14,7 @@ url: "http://yourdomain.com" # the base hostname & protocol for your site
 # Build settings
 markdown: kramdown
 
+# SASS
+sass:
+    sass_dir: _sass
+
